# ren_brewery

./: Kconfig  README.md  west.yml
boards/: CMakeLists.txt  Kconfig
boards/ek_ra6m4/: CMakeLists.txt  Kconfig  Kconfig.board
boards/ek_ra6m4/bsp/: bsp_mcu_device_pn_cfg.h
boards/ek_ra6m5/: CMakeLists.txt  Kconfig  Kconfig.board
boards/ek_ra6m5/bsp/: bsp_mcu_device_pn_cfg.h
boards/ek_ra6m5/ra_gen/: pin_data.c
drivers/: Kconfig
drivers/gpio/: Kconfig  Kconfig.renesas_ra
drivers/serial/: Kconfig  Kconfig.renesas_ra
samples/hello_world/: CMakeLists.txt  Config.cmake  gcc.cmake  hal_entry.c  main.c  test_defconfig
samples/hello_world/inc/: r_sci_uart_cfg.h
samples/hello_world/script/: fsp.ld
soc/: Kconfig
soc/ra/ra6m4/: Kconfig  Kconfig.defconfig  Kconfig.soc
soc/ra/ra6m5/: Kconfig  Kconfig.defconfig  Kconfig.soc
